Dynamic ark ip set

--- a/cmd/dbserver/Dockerfile
+++ b/cmd/dbserver/Dockerfile
@@ -17,5 +17,5 @@ RUN go build -o dbserver ./dbserver.go
 FROM alpine:latest AS production
 COPY --from=builder /app .
 EXPOSE 8081
-#CMD [ "./dbserver" ]
-#CMD ["/bin/ash"]
+CMD [ "./dbserver" ]
+#CMD ["/bin/sh"]
