Fix port to ip in database when notifying 2

--- a/cmd/ark-controller/Makefile
+++ b/cmd/ark-controller/Makefile
@@ -2,4 +2,7 @@ dockerbuild:
 	docker build -t arkcontroller .
 
 dockerarkrun:
-	docker run -d -p 7777:7777 arkcontroller
+	docker run -it -p 7777:7777 arkcontroller
+
+dockerarkrm:
+	docker image rm arkcontroller
