Pushiing images to dockerhub

--- a/cmd/ark-controller/Makefile
+++ b/cmd/ark-controller/Makefile
@@ -1,5 +1,5 @@
 dockerbuild:
-	docker build -t arkcontroller .
+	docker build -t felicianoej/arkcontroller:latest -t felicianoej/arkcontroller:v1.0 .
 
 dockerarkrun:
 	docker run -it -p 7777:7777 arkcontroller
