--- a/cmd/dbserver/Dockerfile
+++ b/cmd/dbserver/Dockerfile
@@ -2,8 +2,8 @@
 FROM golang:alpine AS builder 
 RUN mkdir /app 
 ADD . /app
-WORKDIR /app
-RUN mkdir ./badger
+#WORKDIR /app
+RUN mkdir /app/badger
 #Adds basics package, this includes gcc which was used in badger's compression algorithm.
 RUN apk add build-base
 #The --no-cache option allows to not cache the index locally, which is useful for keeping containers small.
@@ -11,11 +11,11 @@ RUN apk add build-base
 RUN apk add --no-cache git && apk update
 #Obtain all the dependency to run the functions.
 RUN go get -d
-RUN go build -o dbserver ./dbserver.go
+RUN go build -o dbserver /app/dbserver.go
 
 #execute stage
 FROM alpine:latest AS production
-COPY --from=builder /app .
+COPY --from=builder . .
 EXPOSE 8081
 ENTRYPOINT [ "./dbserver" ]
 CMD [ "" ]
