--- a/cmd/populate/Dockerfile
+++ b/cmd/populate/Dockerfile
@@ -1,7 +1,7 @@
 #build stage
 FROM golang:alpine AS builder 
 RUN mkdir /app 
-ADD . /app
+ADD ./populate.go /app
 WORKDIR /app
 # Adds git to package manager
 RUN apk add --no-cache git
@@ -11,6 +11,6 @@ RUN go build -o populate ./populate.go
 #production stage
 FROM alpine:latest AS production
 # Copies everything from builder to your new continer
-COPY --from=builder . .
+COPY --from=builder /app .
 ENTRYPOINT [ "./populate" ]
 CMD [ "" ]
